<resources>
    <string name="app_name">Shop</string>
    <string name="title_home">Home</string>
    <string name="title_place_order">Place Order</string>
    <string name="title_orders_history">Order Reports</string>
    <string name="title_reports">Cash Reports</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="status">
        <item>Pending</item>
        <item>Active</item>
        <item>Delivered</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <string name="format_order_number">Order Number %1$d</string>
    <string name="format_order_price">AED %1$.2f</string>
</resources>

