<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_place_order"
        android:icon="@drawable/ic_note_add_black_24dp"
        android:title="@string/title_place_order" />

    <item
        android:id="@+id/navigation_orders_history"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_orders_history" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_assignment_turned_in_24px"
        android:title="@string/title_reports" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
