<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.godeliveryservices.shop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_place_order"
        android:name="com.godeliveryservices.shop.ui.dashboard.PlaceOrderFragment"
        android:label="@string/title_place_order"
        tools:layout="@layout/fragment_place_order" />

    <fragment
        android:id="@+id/navigation_orders_history"
        android:name="com.godeliveryservices.shop.ui.orders_history.OrdersHistoryFragment"
        android:label="@string/title_orders_history"
        tools:layout="@layout/fragment_orders_history" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.godeliveryservices.shop.ui.cash_reports.CashReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_place_order" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.godeliveryservices.shop.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.godeliveryservices.shop.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

<!--    <fragment-->
<!--        android:id="@+id/nav_send"-->
<!--        android:name="com.godeliveryservices.shop.ui.send.SendFragment"-->
<!--        android:label="@string/menu_send"-->
<!--        tools:layout="@layout/fragment_send" />-->
</navigation>